src/test/ui/issues/issue-17431-5.stderr
error[E0072]: recursive type `Bar` has infinite size
  --> $DIR/issue-17431-5.rs:5:1
   |
LL | struct Bar<T> { x: Bar<Foo> , marker: marker::PhantomData<T> }
   | ^^^^^^^^^^^^^   ----------- recursive without indirection
   | |
   | recursive type has infinite size
   |
   = help: insert indirection (e.g., a `Box`, `Rc`, or `&`) at some point to make `Bar` representable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0072`.
